you picked the wrong house foool

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -21,9 +21,9 @@
  ISA_fascism:0 ""
  ISA_fascism_DEF:0 ""
  ISA_fascism_ADJ:0 ""
- ISA_democratic:0 ""
- ISA_democratic_DEF:0 ""
- ISA_democratic_ADJ:0 ""
+ ISA_democratic:0 "Imperial States"
+ ISA_democratic_DEF:0 "The Imperial States"
+ ISA_democratic_ADJ:0 "American"
  ISA_communism:0 ""
  ISA_communism_DEF:0 ""
  ISA_communism_ADJ:0 ""
@@ -75,4 +75,22 @@
  MEX_syndicalist_DEF:0 "Zapatistas México"
  MEX_syndicalist_ADJ:0 "Mexican"
  
+ LIB_fascism:0 "Liberian Order"
+ LIB_fascism_DEF:0 "The Liberian Order"
+ LIB_fascism_ADJ:0 "Liberian"
+ LIB_democratic:0 "Republic of Liberia"
+ LIB_democratic_DEF:0 "The Republic of Liberia"
+ LIB_democratic_ADJ:0 "Liberian"
+ LIB_communism:0 "Socialist Liberatia Republic"
+ LIB_communism_DEF:0 "The Socialist Liberatia Republic"
+ LIB_communism_ADJ:0 "Liberian"
+ LIB_anocratic:0 "Masonic Order of Liberia"
+ LIB_anocratic_DEF:0 "The Masonic Order of Liberia"
+ LIB_anocratic_ADJ:0 "Liberia"
+ LIB_neutrality:0 "Ivory Liberia"
+ LIB_neutrality_DEF:0 "Ivory Liberia"
+ LIB_neutrality_ADJ:0 "Liberian"
+ LIB_syndicalist:0 "Liberian Syndicate"
+ LIB_syndicalist_DEF:0 "The Liberian Syndicate"
+ LIB_syndicalist_ADJ:0 "Liberia"
  
